--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-messaging-ktx:24.0.2'// Firebase Messaging
     testImplementation 'junit:junit:4.13.2'
+    implementation 'com.google.firebase:firebase-inappmessaging-display:21.0.0'
+    implementation"com.google.firebase:firebase-analytics:22.1.2"
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     androidTestImplementation platform('androidx.compose:compose-bom:2023.08.00')
