Changes for production release

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         minSdk 24
         targetSdk 34
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -29,8 +29,23 @@ android {
         }
     }
 
+    signingConfigs {
+        config {
+            keyAlias 'apszone'
+            keyPassword '@apsdeoria123'
+            storeFile file('/Users/shubham/Volume D/AndroidStudioPersonal/iastro/keystore/apszone.jks')
+            storePassword '@apsdeoria123'
+        }
+    }
+
     buildTypes {
         release {
+            signingConfig signingConfigs.config
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
