1. Environment Segregation (prod/qa) for firebase 2. Added TimeSlots logic from Firebase 3. Added isActive and isOnline Logic 4. Handled crash attach activity on Fragment 5. Added Banner Click Message

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         targetSdk 34
         versionCode 6
         versionName "1.0.5"
-
+        flavorDimensions "environment"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
@@ -51,6 +51,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    productFlavors {
+        prod {
+            dimension "environment"
+        }
+        qa {
+            versionNameSuffix "-qa"
+            dimension "environment"
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
