Wallet API and Create Order API and Verify payment added.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
+            android:name=".WalletActivity"
+            android:exported="false" />
+        <activity
             android:name=".BookingHistoryActivity"
             android:exported="false" />
         <activity
