--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-sdk
+        android:minSdkVersion="19"
+        tools:overrideLibrary="com.razorpay" />
+
     <application
         android:name=".MyApp"
         android:allowBackup="true"
@@ -17,6 +21,7 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Iastro"
+        tools:replace="android:theme"
         tools:targetApi="31">
         <activity
             android:name=".view.ui.PaymentActivity"
