Added Base Activity for all the activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,9 @@
             android:name=".view.ui.BookingHistoryActivity"
             android:exported="false" />
         <activity
+            android:name=".view.ui.BaseActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.ui.SplashActivity"
             android:exported="true">
             <intent-filter>
