--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx:21.0.1'
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-messaging-ktx:24.0.2'// Firebase Messaging
+    implementation 'com.google.firebase:firebase-config:21.1.2'
+    implementation 'com.google.firebase:firebase-config-ktx:21.2.1'
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.google.firebase:firebase-inappmessaging-display:21.0.0'
     implementation"com.google.firebase:firebase-analytics:22.1.2"
