--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,14 +7,14 @@ plugins {
 
 android {
     namespace 'com.iffelse.iastro'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.iffelse.iastro"
         minSdk 24
         targetSdk 34
-        versionCode 17
-        versionName "1.1.6"
+        versionCode 18
+        versionName "1.1.7"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
@@ -33,6 +33,7 @@ android {
     buildTypes {
         release {
             buildConfigField 'String', 'BASE_URL', '"https://www.apsdeoria.com/iastro_web/api/v1/prod/"'
+            buildConfigField 'String', 'BASE_URL_V2', '"https://www.apsdeoria.com/iastro_web/api/v2/prod/"'
             signingConfig signingConfigs.config
             minifyEnabled true
             shrinkResources true
@@ -40,6 +41,7 @@ android {
         }
         debug {
             buildConfigField 'String', 'BASE_URL', '"https://www.apsdeoria.com/iastro_web/api/v1/qa/"'
+            buildConfigField 'String', 'BASE_URL_V2', '"https://www.apsdeoria.com/iastro_web/api/v2/qa/"'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -56,11 +58,11 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
@@ -118,4 +120,6 @@ dependencies {
     implementation("com.google.firebase:firebase-crashlytics:19.2.0")
 
     implementation 'com.razorpay:checkout:1.6.40'
+    implementation 'io.agora.rtc:chat-sdk:1.3.0'
+    implementation 'com.sceyt:sceyt-chat-android-uikit:1.7.4'
 }
