--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-sdk
+        android:minSdkVersion="19"
+        tools:overrideLibrary="com.razorpay" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="Manifest.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
-    <uses-sdk
-        android:minSdkVersion="19"
-        tools:overrideLibrary="com.razorpay" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application
         android:name=".MyApp"
@@ -25,6 +27,9 @@
         tools:targetApi="31">
         <activity
             android:name=".view.ui.PaymentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.ui.ChatActivity"
             android:exported="false" />
         <activity
             android:name=".view.ui.ProfileActivity"
