--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ dependencyResolutionManagement {
         maven {
             url 'https://maven.cashfree.com/release'
         }
+        maven { url 'https://storage.zego.im/maven' }
     }
 }
 
